added get machine parameters
