# cmd/api/routes.go
@@ -27,6 +27,7 @@ func (app *application) routes() http.Handler {
 	v1 := g.Group("/api/v1", auth.AuthMiddleware())
 	{
 		v1.GET("/machines", app.getAllMachines)
+		v1.GET("/machines/getMachineParameters/:machine_id", app.getMachineParameters)
 
 		v1.POST("/tasks/create", app.createTask)
 		v1.GET("/tasks/getTaskList", app.getAllTasks)
