# docs/swagger.yaml
@@ -50,6 +50,8 @@ definitions:
         type: boolean
       machineId:
         type: integer
+      machineName:
+        type: string
       maximumErrorRates:
         items:
           $ref: '#/definitions/main.MaximumErrorRate'
@@ -113,6 +115,31 @@ paths:
       security:
       - BearerAuth: []
       summary: Returns all machines
+      tags:
+      - machines
+  /api/v1/machines/getMachineParameters/{machine_id}:
+    get:
+      consumes:
+      - application/json
+      description: returns machine parameters
+      parameters:
+      - description: machine ID
+        in: path
+        name: machine_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              type: string
+            type: array
+      security:
+      - BearerAuth: []
+      summary: returns machine parameters
       tags:
       - machines
   /api/v1/tasks/GetTaskDetail/{task_id}:
